Correct css links
correcting css links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="UTF-8">
         <title>Raven Sumner</title>
-		<link rel="stylesheet" type="text/css" href="C:\Users\raven\Documents\GitHub\Tech-Academy-Projects\Portfolio Website\css\style-portfolio.css">
+		<link rel="stylesheet" type="text/css" href="./css/style-portfolio.css">
 	</head>
 
 <!-- Body -->
